# ralphy

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  guard.ps1  prompt.execute.md  prompt.plan.md  prompt.plan.staged.md  ralph.ps1  ralphy.ps1  stop_exit_hook.ps1
.ralphy/: plan.md
crates/ralphy-adapter-support/: Cargo.toml
crates/ralphy-adapter-support/src/: assets.rs  budget.rs  classify.rs  degraded.rs  detect.rs  headless.rs  idle.rs  json_session.rs  lib.rs  program.rs  resume.rs  scaffold.rs  sentinel.rs  session_files.rs  skills.rs
crates/ralphy-adapter-support/tests/: headless.rs
crates/ralphy-adapter-support/tests/fixtures/sample/: hello.txt
crates/ralphy-agent-claude/: Cargo.toml
crates/ralphy-agent-claude/src/: api_watch.rs  auth.rs  headless.rs  interactive.rs  lib.rs  plan.rs  settings.rs  tasks.rs  usage.rs
crates/ralphy-agent-codex/: Cargo.toml
crates/ralphy-agent-codex/src/: auth.rs  command.rs  lib.rs  outcome.rs  skills.rs  tasks.rs  usage.rs
crates/ralphy-agent-copilot/: Cargo.toml
crates/ralphy-agent-copilot/fixtures/: mcp-servers-loaded-2026-07-20.jsonl  skills-loaded-2026-07-20.jsonl
crates/ralphy-agent-copilot/src/: auth.rs  catalog.rs  command.rs  effort.rs  guards.rs  lib.rs  outcome.rs  settings.rs  skills.rs  tasks.rs  usage.rs
crates/ralphy-agent-cursor/: Cargo.toml
crates/ralphy-agent-cursor/fixtures/: interrupted-2026-07-20.jsonl  killed-2026-07-20.jsonl  model-entitlement-2026-07-21.err  model-invalid-2026-07-21.err  permission-denied-2026-07-20.jsonl  preflight-rejection-2026-07-20.err  tool-failure-2026-07-20.jsonl  usage-limit-midturn-2026-07-21.jsonl  usage-turn1-2026-07-20.json  usage-turn2-2026-07-20.json
crates/ralphy-agent-cursor/src/: auth.rs  command.rs  guards.rs  lib.rs  model.rs  outcome.rs  settings.rs  skills.rs  tasks.rs  usage.rs
crates/ralphy-agent-gemini/: Cargo.toml
crates/ralphy-agent-gemini/fixtures/: charter-roundtrip-2026-07-21.jsonl  usage-cached-multimodel-2026-07-21.jsonl  usage-live-2026-07-21.jsonl
crates/ralphy-agent-gemini/src/: auth.rs  command.rs  context.rs  lib.rs  model.rs  outcome.rs  policy.rs  revocation.rs  root.rs  settings.rs  skills.rs  tasks.rs  usage.rs
crates/ralphy-agent-kimi/: Cargo.toml
crates/ralphy-agent-kimi/src/: auth.rs  command.rs  lib.rs  outcome.rs  skills.rs  tasks.rs  usage.rs
crates/ralphy-agent-opencode/: Cargo.toml
crates/ralphy-agent-opencode/src/: command.rs  events.rs  lib.rs  outcome.rs  skills.rs  tasks.rs  usage.rs
crates/ralphy-cli/: Cargo.toml  build.rs
crates/ralphy-cli/src/: cli.rs  config.rs  daemon.rs  delivery.rs  guard.rs  hook.rs  init.rs  install.rs  issues.rs  main.rs  models.rs  mutate.rs  pricing.rs  run.rs  runlock.rs  runstate.rs  schedule.rs  split_agent.rs  triage.rs  ui.rs  usage.rs
crates/ralphy-cli/src/events/: client.rs  config.rs  emitter.rs  envelope.rs  mod.rs  sink.rs
crates/ralphy-cli/src/events/envelope/: tests.rs
crates/ralphy-cli/src/events/sink/: delivery.rs  layer.rs  poller.rs
crates/ralphy-cli/src/guard/: tests.rs
crates/ralphy-cli/src/init/: gate.rs  issues.rs  render.rs  resolve.rs  run.rs  scaffold.rs  skills.rs  verify.rs  wizard.rs
crates/ralphy-cli/src/issues/: tests.rs
crates/ralphy-cli/src/pricing/: defaults.rs  fetch.rs  floor.rs  ingest.rs
crates/ralphy-cli/src/run/: report.rs  summary.rs  wiring.rs
crates/ralphy-cli/src/runstate/: capture.rs  event.rs  fields.rs  roundtrip.rs  state.rs
crates/ralphy-cli/src/schedule/: platform.rs  spec.rs
crates/ralphy-cli/src/telegram/: client.rs  config.rs  mod.rs  notifier.rs
crates/ralphy-cli/src/ui/: fit.rs  notice.rs  presenter.rs  render.rs  tests.rs
crates/ralphy-cli/tests/: mutate.rs
crates/ralphy-core/: Cargo.toml
crates/ralphy-core/src/: acceptance.rs  agent.rs  blocked.rs  cmdcost.rs  diagnosis.rs  effort.rs  emit.rs  environment.rs  git.rs  github.rs  gitignore.rs  handoff.rs  init_session.rs  issues_draft.rs  knowledge.rs  ledger.rs  lib.rs  markdown.rs  plan.rs  protocol.rs  queue_view.rs  references.rs  repo.rs  runner.rs  settings.rs  tracker.rs  triage_draft.rs  types.rs  verify.rs
crates/ralphy-core/src/github/: attachments.rs  client.rs  comments.rs  issues.rs  labels.rs  references.rs  repo.rs
crates/ralphy-core/src/runner/: artifacts.rs  branch.rs  clock.rs  comments.rs  phases.rs  types.rs
crates/ralphy-core/src/verify/: tests.rs
crates/ralphy-core/tests/: dry_run.rs  effort.rs  prompt_assembly.rs  prompt_ledger.rs  queue.rs  release_profile.rs  verify_gate.rs
crates/ralphy-core/tests/fixtures/: graph-parity.json
crates/ralphy-daemon/: Cargo.toml  build.rs
crates/ralphy-daemon/assets/ui/: app.js  detached.html  index.html  login.html  styles.css  wb-console.js  wb-daemon.js  wb-fail.js  wb-kanban.js  wb-mode.js  wb-runs.js  wb-settings.js  wb-translate.js  wb-viewer.js
crates/ralphy-daemon/src/: auth.rs  autostart.rs  confine.rs  cookie.rs  dispatch.rs  epoch.rs  fswrite.rs  identity.rs  lib.rs  password.rs  protocol.rs  registry.rs  session.rs  totp.rs  tree.rs  usage.rs  watch.rs
crates/ralphy-daemon/tests/: auth_ws.rs  child_env_hygiene.rs  codec_transport_free.rs  command_board.rs  command_branch.rs  command_config.rs  command_config_mutate.rs  command_mutate_git.rs  command_refusal.rs  command_run_params.rs  command_stream_teardown.rs  command_ws.rs  console_reattach.rs  console_ws.rs  observe_read.rs  security_routes.rs  session_persistence.rs  session_roundtrip.rs  session_single_writer.rs  session_transport_free.rs  session_ws.rs  session_ws_cursor.rs  session_ws_gemini.rs  tree_watch.rs  wb_accept_209.py  workspace_write.rs  ws_presence.rs
crates/ralphy-daemon/ui-tests/: wb-fail.test.mjs  wb-translate.test.mjs
crates/ralphy-proc-util/: Cargo.toml
crates/ralphy-proc-util/src/: cursor.rs  lib.rs
crates/ralphy-pty/: Cargo.toml
crates/ralphy-pty/src/: lib.rs
crates/ralphy-pty/tests/: pty.rs
crates/ralphy-usage-scan/: Cargo.toml
crates/ralphy-usage-scan/src/: claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  kimi.rs  lib.rs  opencode.rs
(+194 files in other folders)
