[workspace]
resolver = "2"
members = [
    "crates/ralphy-core",
    "crates/ralphy-cli",
    "crates/ralphy-agent-claude",
    "crates/ralphy-agent-codex",
    "crates/ralphy-agent-kimi",
    "crates/ralphy-agent-opencode",
    "crates/ralphy-pty",
    "crates/ralphy-adapter-support",
    "crates/ralphy-proc-util",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/paulocorcino/ralphy"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
include_dir = "0.7"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
indicatif = "0.17"
console = "0.15"
ureq = { version = "2", features = ["json"] }
directories = "5"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
ulid = "1"
hostname = "0.4"
tempfile = "3"

ralphy-core = { path = "crates/ralphy-core" }
ralphy-agent-claude = { path = "crates/ralphy-agent-claude" }
ralphy-agent-codex = { path = "crates/ralphy-agent-codex" }
ralphy-agent-kimi = { path = "crates/ralphy-agent-kimi" }
ralphy-agent-opencode = { path = "crates/ralphy-agent-opencode" }
ralphy-pty = { path = "crates/ralphy-pty" }
ralphy-adapter-support = { path = "crates/ralphy-adapter-support" }
ralphy-proc-util = { path = "crates/ralphy-proc-util" }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
