[package]
name = "ralphy-agent-claude"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Claude Code adapter for Ralphy: drives `claude -p` behind the core Agent contract."

[dependencies]
anyhow.workspace = true
tracing.workspace = true
ralphy-core.workspace = true
