[package]
name = "ralphy-agent-claude"
version = "0.1.0-rc13"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Claude Code adapter for Ralphy: drives `claude -p` behind the core Agent contract."

[dependencies]
anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
include_dir.workspace = true
serde.workspace = true
serde_json.workspace = true
ralphy-core.workspace = true
ralphy-pty.workspace = true
ralphy-adapter-support.workspace = true
