[package]
name = "ralphy-agent-codex"
version = "0.1.0-rc5"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Codex CLI adapter for Ralphy: drives `codex exec` behind the core Agent contract."

[dependencies]
anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
include_dir.workspace = true
ralphy-core.workspace = true
ralphy-adapter-support.workspace = true
