[package]
name = "ralphy-agent-cursor"
version = "0.1.0-rc13"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cursor Agent CLI adapter for Ralphy: drives headless `cursor-agent` behind the core Agent contract."

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
ralphy-core.workspace = true
ralphy-adapter-support.workspace = true
include_dir.workspace = true

[dev-dependencies]
tempfile.workspace = true
