[package]
name = "ralphy-agent-cursor"
version = "0.1.0-rc13"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cursor Agent CLI adapter for Ralphy: drives headless `cursor-agent` behind the core Agent contract."

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
include_dir.workspace = true
ralphy-core.workspace = true
ralphy-adapter-support.workspace = true
# The login probe runs in a throwaway cwd + config dir, so it is a regular dep,
# not a dev one (ADR-0042 D6/D17 — see `auth::probe_cursor_login`).
tempfile.workspace = true
