[package]
name = "ralphy-agent-opencode"
version = "0.1.0-rc7"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenCode CLI adapter for Ralphy: drives `opencode run` behind the core Agent contract."

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
include_dir.workspace = true
rusqlite.workspace = true
ralphy-core.workspace = true
ralphy-adapter-support.workspace = true
