[package]
name = "ralphy-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ralphy command-line entry point."

[[bin]]
name = "ralphy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ralphy-core.workspace = true
ralphy-agent-claude.workspace = true
