[package]
name = "ralphy-cli"
version = "0.1.0-rc12"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ralphy command-line entry point."

[[bin]]
name = "ralphy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
indicatif.workspace = true
console.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
directories.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
hostname.workspace = true
ralphy-core.workspace = true
ralphy-agent-claude.workspace = true
ralphy-agent-codex.workspace = true
ralphy-agent-opencode.workspace = true
ralphy-adapter-support.workspace = true

# Liveness probe for the run.lock presence lock (runlock.rs): one syscall per
# platform, so two tiny cfg-split crates instead of the sysinfo tree.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
