[package]
name = "ralphy-cli"
version = "0.1.0-rc13"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ralphy command-line entry point."

[[bin]]
name = "ralphy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
indicatif.workspace = true
console.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
directories.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
hostname.workspace = true
# Ambiguous-width (East-Asian) worst-case measurement for the queue/active-line
# fit (#226): already in Cargo.lock via console/indicatif, so a direct edge only.
unicode-width = "0.2"
ralphy-core.workspace = true
ralphy-agent-claude.workspace = true
ralphy-agent-codex.workspace = true
ralphy-agent-copilot.workspace = true
ralphy-agent-kimi.workspace = true
ralphy-agent-opencode.workspace = true
ralphy-adapter-support.workspace = true
ralphy-daemon.workspace = true
# Terminal QR for `daemon setup` TOTP enrolment (issue #179); pure-Rust unicode
# render only (no image/svg feature tree). Same version as ralphy-daemon.
qrcode = { version = "0.14", default-features = false }

[dev-dependencies]
tempfile.workspace = true

# Liveness probe for the run.lock presence lock (runlock.rs): one syscall per
# platform, so two tiny cfg-split crates instead of the sysinfo tree.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

# Embed the ralphy.exe application icon (assets/icons/ralphy.ico) into the
# Windows binary via build.rs. Windows-only; on Linux build.rs is a no-op.
[target.'cfg(windows)'.build-dependencies]
winresource = { workspace = true }
