[package]
name = "ralphy-core"
version = "0.1.0-rc10"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Execution-mode-agnostic core for Ralphy: domain types, the Agent contract, and the run lifecycle."

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ralphy-proc-util.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tracing.workspace = true
