[package]
name = "ralphy-daemon"
version = "0.1.0-rc13"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ralphy's resident daemon: a localhost HTTP listener serving the embedded workbench UI (docs/adr/0032). The workspace's only async (tokio + axum) crate — the runtime is confined here."

[dependencies]
anyhow.workspace = true
include_dir.workspace = true
tracing.workspace = true
# The workspace's first — and only — async stack (ADR-0032 §10): narrow tokio
# features, not `full`; axum carries HTTP now and the WebSocket upgrade later.
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros"] }
axum = "0.8"

[dev-dependencies]
# Drive the Router in-process (`ServiceExt::oneshot`) — no sockets in unit tests.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
