[package]
name = "ralphy-daemon"
version = "0.1.0-rc13"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ralphy's resident daemon: a localhost HTTP listener serving the embedded workbench UI (docs/adr/0032). The workspace's only async (tokio + axum) crate — the runtime is confined here."

[dependencies]
anyhow.workspace = true
include_dir.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
# ulid `serde` lets `id` serialize as its 26-char string in daemon.toml.
ulid = { workspace = true, features = ["serde"] }
# The workspace's first — and only — async stack (ADR-0032 §10): narrow tokio
# features, not `full`; axum carries HTTP now and the WebSocket upgrade later.
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros", "time", "sync"] }
axum = { version = "0.8", features = ["ws"] }
# The session manager drives a real PTY child (ralphy-pty) and resolves the agent
# program cross-platform (ralphy-proc-util); neither pulls in ralphy-core.
ralphy-pty.workspace = true
ralphy-proc-util.workspace = true
# `terminal_size()` lets the session_test_child observe PTY resizes; a normal dep
# (not dev) because src/bin/ targets don't see [dev-dependencies].
terminal_size = "0.3"

[dev-dependencies]
# Drive the Router in-process (`ServiceExt::oneshot`) — no sockets in unit tests.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile.workspace = true
# A real WebSocket client for the `/ws` presence integration test.
tokio-tungstenite = "0.24"
futures-util = "0.3"
