[package]
name = "ralphy-proc-util"
version = "0.1.0-rc13"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Leaf crate for Ralphy process/path resolution: PATH/PATHEXT program search, ~/.local/bin fallback, and the vendor-specific locators and spawn-time gates that both the adapters and the core-free daemon must agree on."

[dependencies]
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
